<resources>
    <string name="app_name">Hack&amp;Stock</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_ai_tips"> AI Tips</string>
    <string name="title_game"> Game</string>
    <string name="title_quiz"> Quiz</string>
    <string name="add_stock">Add Stock</string>
    <string name="title_login">Login</string>
    <string name="title_profile_settings">Profile Settings</string>
    <string name="title_detail">Detail</string>
    <string name="button_save">Save</string>



    </resources>