<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_ai_tips"
        android:icon="@drawable/ic_bulb_black_24dp"
        android:title="@string/title_ai_tips" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_game_black_24dp"
        android:title="@string/title_game" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz_black_24dp"
        android:title="@string/title_quiz" />

<!--    <item-->
<!--        android:id="@+id/action_logout"-->
<!--        android:title="Logout"-->
<!--        app:showAsAction="always"-->
<!--        android:icon="@drawable/ic_logout_black_24dp" />-->

</menu>