<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">
    <!--app:startDestination="@+id/navigation_home">-->

    <fragment
        android:id="@+id/loginFragment"
        android:name="sk.upjs.hackstock.ui.login.LoginFragment"
        android:label="@string/title_login"/>

    <action
        android:id="@+id/action_loginFragment_to_fragment_home"
        app:destination="@+id/navigation_home" />

    <fragment
        android:id="@+id/profile_settings_fragment"
        android:name="sk.upjs.hackstock.ui.settings.ProfileSettingsFragment"
        android:label="@string/title_profile_settings"
        tools:layout="@layout/fragment_profile_settings" />
    <action
        android:id="@+id/action_to_profileSettingsFragment"
        app:destination="@id/profile_settings_fragment" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="sk.upjs.hackstock.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <action
        android:id="@+id/action_home_to_detail"
        app:destination="@id/detailFragment"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true"/>

    <fragment
        android:id="@+id/detailFragment"
        android:name="sk.upjs.hackstock.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="sk.upjs.hackstock.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

    </fragment>
    <action
        android:id="@+id/action_search_to_detail"
        app:destination="@id/detailFragment"
        app:popUpTo="@id/navigation_search"
        app:popUpToInclusive="true"/>

    <fragment
        android:id="@+id/navigation_ai_tips"
        android:name="sk.upjs.hackstock.ui.aiTips.AiTipsFragment"
        android:label="@string/title_ai_tips"
        tools:layout="@layout/fragment_ai_tips" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="sk.upjs.hackstock.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="sk.upjs.hackstock.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

</navigation>